samples/_failures_safe/1761356533_bd5fc3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a9563da.c: In function ‘main’:
./samples/SAFE/__tmp_8a9563da.c:148:5: error: expected expression at end of input
  148 |     if (
      |     ^~
./samples/SAFE/__tmp_8a9563da.c:148:5: error: expected declaration or statement at end of input
